# chess-inference

./: .gitignore  CLAUDE.md  Dockerfile  download-games.sh  init-firewall.sh  results.md  todo.md
data-processing/: .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
data-processing/scripts/: pyproject.toml  visualize_stats.py
data-processing/src/: buckets.rs  error.rs  filters.rs  lib.rs  main.rs  parser.rs  stats.rs  time_control.rs  tokenizer.rs  training_visitor.rs  training_writer.rs
emsearch/: __init__.py  chess_dataset.py  config.py  eval_checkpoint.py  evaluate.py  glicko2.py  main.py  model.py  phase1_experiments.py  presets.py  pyproject.toml  scaling_experiments.py  stockfish_eval.py  sweep.py  train.py  utils.py
emsearch/tests/: test_config.py  test_dataset.py  test_glicko2.py  test_model.py  test_presets.py  test_utils.py
