[package]
name = "data-processing"
version = "0.1.0"
edition = "2021"

[dependencies]
pgn-reader = "0.26"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
rayon = "1.10"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

# Lint configuration - mirrors ESLint strict rules
[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
# Correctness (like ESLint's recommended)
correctness = { level = "deny", priority = -1 }

# Suspicious patterns
suspicious = { level = "warn", priority = -1 }

# Complexity (like ESLint complexity, max-depth, sonarjs/cognitive-complexity)
cognitive_complexity = "warn"
too_many_arguments = "warn"
too_many_lines = "warn"

# Code quality (like ESLint no-unused-vars, prefer-const, no-shadow)
redundant_clone = "warn"
redundant_closure = "warn"
redundant_else = "warn"
needless_return = "warn"
needless_pass_by_value = "warn"
needless_borrow = "warn"
unused_self = "warn"
useless_let_if_seq = "warn"

# Style (like ESLint unicorn rules, prefer-* rules)
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
filter_map_identity = "warn"
manual_filter_map = "warn"
manual_find_map = "warn"
manual_is_ascii_check = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
option_if_let_else = "warn"
range_plus_one = "warn"
single_match_else = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"

# Explicit is better (like ESLint explicit rules)
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
implicit_clone = "warn"

# Performance
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"

# Security-ish (like ESLint security plugin)
panic = "warn"
expect_used = "warn"
unwrap_used = "warn"
# indexing_slicing = "warn"  # Too noisy - we do bounds checks before indexing

# Pedantic subset (cleaner code)
bool_to_int_with_if = "warn"
case_sensitive_file_extension_comparisons = "warn"
default_trait_access = "warn"
doc_markdown = "warn"
empty_structs_with_brackets = "warn"
expl_impl_clone_on_copy = "warn"
if_not_else = "warn"
inconsistent_struct_constructor = "warn"
iter_not_returning_iterator = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
map_clone = "warn"
# must_use_candidate = "warn"  # Too noisy for utility functions
mut_mut = "warn"
naive_bytecount = "warn"
needless_for_each = "warn"
no_effect_underscore_binding = "warn"
ptr_as_ptr = "warn"
ref_option_ref = "warn"
return_self_not_must_use = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
stable_sort_primitive = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
unnecessary_join = "warn"
unused_async = "warn"
used_underscore_binding = "warn"
zero_sized_map_values = "warn"
